# daily_dose_of_system_design

./: LICENSE  README.md
lld/email_newsletter_z2p/: Cargo.toml  Dockerfile
lld/email_newsletter_z2p/.cargo/: config.toml
lld/email_newsletter_z2p/scripts/: init_db.sh
lld/email_newsletter_z2p/src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
lld/email_newsletter_z2p/src/domain/: subscriber_email.rs  subscriber_name.rs
lld/email_newsletter_z2p/src/routes/: subscriptions.rs
lld/email_newsletter_z2p/tests/: health_check.rs
